--- a/style.css
+++ b/style.css
@@ -9,10 +9,9 @@ img {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-
 img:hover {
-    transform: scale(1.09);
-  box-shadow: 0 0 25px rgba(0, 255, 255, 0.7)
+  transform: scale(1.09);
+  box-shadow: 0 0 25px rgba(0, 255, 255, 0.7);
 }
 
 body {
